[gd_scene load_steps=10 format=2]

[ext_resource path="res://01_Cutscenes_EXPORT_ROTARY/Titlescreen_ROTARY_1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TItleScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI_elements/UIButtonLevelSelection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI_elements/UIButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://00_Font_ROTARY/Inconstant-Height25.otf" type="DynamicFontData" id=5]
[ext_resource path="res://01_Cutscenes_EXPORT_ROTARY/Titlescreen_ROTARY_2.png" type="Texture" id=6]
[ext_resource path="res://01_Cutscenes_EXPORT_ROTARY/Titlescreen_ROTARY_3.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 88
font_data = ExtResource( 5 )

[node name="TItleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TitleScreenUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="TitleScreenUI"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="MainButtons" type="VBoxContainer" parent="TitleScreenUI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -275.0
margin_top = -402.0
margin_right = 275.0
margin_bottom = -101.0
custom_constants/separation = 32

[node name="StoryModeButton" parent="TitleScreenUI/MainButtons" instance=ExtResource( 4 )]
margin_right = 550.0
text = "MODALITÃ€ STORIA"

[node name="LevelSelectionButton" parent="TitleScreenUI/MainButtons" instance=ExtResource( 4 )]
margin_top = 111.0
margin_right = 550.0
margin_bottom = 190.0
text = "SELEZIONE MINIGIOCHI"

[node name="CreditsButton" parent="TitleScreenUI/MainButtons" instance=ExtResource( 4 )]
margin_top = 222.0
margin_right = 550.0
margin_bottom = 301.0
text = "CREDITS"

[node name="Sottotitolo" type="Label" parent="TitleScreenUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.0
margin_top = -7.0
margin_right = 297.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Un gioco sul risparmio di cibo a tutti i costi"
align = 1
valign = 1
autowrap = true

[node name="SelezioneUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="SelezioneUI"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )

[node name="TitoloSelezione" type="Label" parent="SelezioneUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -550.0
margin_top = -323.0
margin_right = 550.0
margin_bottom = -214.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Selezione minigiochi"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="LevelSelectionButtons" type="VBoxContainer" parent="SelezioneUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -253.0
margin_top = -22.0
margin_right = 225.0
margin_bottom = 380.0
custom_constants/separation = 25

[node name="UIButtonLevelSelection1" parent="SelezioneUI/LevelSelectionButtons" instance=ExtResource( 3 )]
margin_right = 478.0
margin_bottom = 114.0
text = "LA SPESA"
minigame_number = 1

[node name="ColorRect" parent="SelezioneUI/LevelSelectionButtons/UIButtonLevelSelection1" index="1"]
margin_left = 83.0
margin_right = 398.0

[node name="UIButtonLevelSelection2" parent="SelezioneUI/LevelSelectionButtons" instance=ExtResource( 3 )]
margin_top = 139.0
margin_right = 478.0
margin_bottom = 253.0
text = "IL FRIGO"
minigame_number = 2

[node name="ColorRect" parent="SelezioneUI/LevelSelectionButtons/UIButtonLevelSelection2" index="1"]
margin_left = 83.0
margin_right = 396.0

[node name="UIButtonLevelSelection3" parent="SelezioneUI/LevelSelectionButtons" instance=ExtResource( 3 )]
margin_top = 278.0
margin_right = 478.0
margin_bottom = 392.0
text = "LA CUCINA"
minigame_number = 3

[node name="ColorRect" parent="SelezioneUI/LevelSelectionButtons/UIButtonLevelSelection3" index="1"]
margin_left = 61.0
margin_right = 420.0

[node name="BackButton" parent="SelezioneUI" instance=ExtResource( 4 )]
margin_left = 49.0
margin_top = 1070.0
margin_right = 462.0
margin_bottom = 1149.0
text = "INDIETRO"

[node name="CreditsUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="CreditsUI"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )

[node name="BackButton" parent="CreditsUI" instance=ExtResource( 4 )]
margin_left = 49.0
margin_top = 1070.0
margin_right = 462.0
margin_bottom = 1149.0
text = "INDIETRO"

[node name="VERSIONE" type="Label" parent="."]
margin_left = 51.0
margin_top = 40.0
margin_right = 91.0
margin_bottom = 54.0
rect_scale = Vector2( 3, 3 )
text = "v. 0.15"

[connection signal="button_pressed" from="TitleScreenUI/MainButtons/StoryModeButton" to="." method="start_story_mode"]
[connection signal="button_pressed" from="TitleScreenUI/MainButtons/LevelSelectionButton" to="." method="show_level_selection"]
[connection signal="button_pressed" from="TitleScreenUI/MainButtons/CreditsButton" to="." method="show_credits"]
[connection signal="minigame_selected" from="SelezioneUI/LevelSelectionButtons/UIButtonLevelSelection1" to="." method="start_selected_minigame"]
[connection signal="minigame_selected" from="SelezioneUI/LevelSelectionButtons/UIButtonLevelSelection2" to="." method="start_selected_minigame"]
[connection signal="minigame_selected" from="SelezioneUI/LevelSelectionButtons/UIButtonLevelSelection3" to="." method="start_selected_minigame"]
[connection signal="button_pressed" from="SelezioneUI/BackButton" to="." method="show_titlescreen"]
[connection signal="button_pressed" from="CreditsUI/BackButton" to="." method="show_titlescreen"]

[editable path="SelezioneUI/LevelSelectionButtons/UIButtonLevelSelection1"]
[editable path="SelezioneUI/LevelSelectionButtons/UIButtonLevelSelection2"]
[editable path="SelezioneUI/LevelSelectionButtons/UIButtonLevelSelection3"]
